Extracted confs from core